# StartJava

./: build.gradle  jk.txt  out.txt  persion.txt  settings.gradle  test.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/myjava/javatest/: IMyBinder.aidl  IMyPlay.aidl
app/src/main/assets/: js.html
app/src/main/java/com/myjava/javatest/: ActivityBasePlugin.java  ActivityPlugin.java  AndroidEventManager.java  AndroidToJs.java  AppBaseListener.java  BaseActivity.java  Cockroach.java  EnumTest.java  Event.java  EventCanceller.java  EventDelegateCanceller.java  EventManager.java  EventProgressDelegate.java  ExtraParams.java  FindPlugin.java  FirstActivity.java  GuiBingSort.java  HttpBasePlugin.java  ListActivity.java  LockTest.java  MainActivity.java  Mn.java  MyApp.java  MyBroad.java  MyFragment.java  MyFragmentB.java  MyFragmentC.java  MyRecycleView.java  MyService.java  MyView.java  OnEventProgressListener.java  Person.java  PluginHelper.java  QuitCockroachException.java  ReportPlugin.java  SeasonInter.java  SeasonSum.java  SecondActivity.java  SimpleUrlParams.java  Subs.java  (+6 more)
app/src/main/java/com/myjava/javatest/hello/: MyListView.java  MyScrollView.java  Nie.java  OtherActivity.java  Person.java  SayHello.java
app/src/main/java/com/myjava/recy/: MyRecycleView.java  Recycler.java
app/src/main/jni/: MN.cpp  NativeHelloJNI.cpp  NativeNio.cpp
app/src/main/res/anim/: andim.xml
app/src/main/res/layout/: activity_f.xml  activity_list.xml  activity_main.xml  activity_s.xml  fj.xml  layout_my_fragment.xml  layout_my_fragment2.xml  test.xml
app/src/main/res/values/: attrs.xml  styles.xml
lib/: build.gradle
lib2/: build.gradle
lib3/: build.gradle
(+92 files in other folders)
